// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Shell > matches snapshot in default and collapsed states > collapsed 1`] = `
<div>
  <div
    class="shell sidebar-collapsed"
  >
    <aside>
      Backend cleanup review
    </aside>
    <div
      class="main"
    >
      <div>
        Run
      </div>
      <div
        class="body"
      />
    </div>
  </div>
</div>
`;

exports[`Shell > matches snapshot in default and collapsed states > default 1`] = `
<div>
  <div
    class="shell"
    style="grid-template-columns: 272px minmax(0, 1fr);"
  >
    <aside>
      Backend cleanup review
    </aside>
    <div
      class="main"
    >
      <div>
        Run
      </div>
      <div
        class="body"
      />
    </div>
    <div
      aria-label="Resize the sidebar"
      aria-orientation="vertical"
      class="resize-handle sidebar-resize"
      role="separator"
      style="left: 270px;"
    />
  </div>
</div>
`;
